Changed js path

--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
       Coded by <a href="https://github.com/bishalmallick">Bishal Mallick</a>.
     </p>
   </footer>
-  <script src="/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
